# PicoTixClock

./: CMakeLists.txt  ds3231.cpp  main.cpp  terminal.cpp
include/: ds3231.h  terminal.h
pio/: ws2812.pio
src/: main.c
